--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -20,6 +20,7 @@
             android:summary="날짜를 설정합니다"
             android:key="key_p_date"/>
         <Preference
+            android:enabled="false"
             android:title="요일"
             android:summary="요일을 설정합니다"
             android:key="key_p_day"/>
