알람 반복설정 유/무 초기 미선택 버그 수정, 날짜 선택 기능 구현

--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -5,8 +5,8 @@
 
         <SwitchPreference
             android:title="반복 설정 유/무"
-            android:summaryOn="1회용 알람으로 설정됩니다"
-            android:summaryOff="아래 설정된 사항에 맞춰 반복됩니다"
+            android:summaryOn="아래 설정된 사항에 맞춰 반복됩니다"
+            android:summaryOff="1회용 알람으로 설정됩니다"
             android:id="@+id/sp_repeat"
             android:key="key_sp_repeat"/>
     </PreferenceCategory>
@@ -16,13 +16,16 @@
         android:title="2. 날짜 / 요일 선택">
         <!-- 임의의 Preference 클래스 생성해야함 -->
         <Preference
+            android:enabled="false"
             android:title="날짜"
             android:summary="날짜를 설정합니다"
             android:key="key_p_date"/>
-        <Preference
-            android:enabled="false"
+        <project.wgl.callarm.DayPDialogPreference
+            android:enabled="true"
             android:title="요일"
             android:summary="요일을 설정합니다"
+            android:entries="@array/ddd"
+            android:entryValues="@array/ddd_result"
             android:key="key_p_day"/>
     </PreferenceCategory>
 
@@ -50,7 +53,7 @@
             android:defaultValue="true"
             android:title="진동"
             android:switchTextOn="진동도 같이 울립니다"
-            android:switchTextOff=""
+            android:switchTextOff="진동을 울리지 않습니다"
             android:summaryOn="진동도 같이 울립니다"
             android:summaryOff="진동을 울리지 않습니다"/>
 
