알람 설정 화면에서 진동 설정에 따른 진동 켬끔 구현. 벨소리 종류를 모든 알림/벨소리로 변경.

--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -45,7 +45,7 @@
         <RingtonePreference
             android:key="key_rp_ringtone"
             android:title="소리 선택"
-            android:ringtoneType="alarm"
+            android:ringtoneType="all"
             android:summary="알람 벨소리를 선택합니다"/>
         <SwitchPreference
             android:id="@+id/sp_vibe"
