날짜 선택 DialogPreference 구현 (날짜선택 버튼 삭제, 다음주 빠른선택 버튼 구현)

--- a/app/src/main/res/layout/view_picker_date.xml
+++ b/app/src/main/res/layout/view_picker_date.xml
@@ -38,11 +38,13 @@
                     android:layout_height="match_parent" />
 
                 <Button
-                    android:id="@+id/btn_dp_select"
-                    android:text="날짜 선택"
+                    android:id="@+id/btn_dp_next_week"
+                    android:text="다음주"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+
+
             </LinearLayout>
 
         </LinearLayout>
