--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -65,10 +65,9 @@
         android:title="5. 연락처 설정">
 
         <!-- 전화 / 문자메시지 / 카톡 / 라인 / 페이스북 메신저 / ... -->
-        <!-- 임의의 Preference 클래스 생성해야함 -->
         <project.wgl.callarm.CPDialogPreference
             android:key="key_p_contact"
-            android:title="연락 방법 설정"
+            android:title="연락처 선택"
             android:persistent="false"
             android:positiveButtonText="설정"
             android:negativeButtonText="닫기"/>
