--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -68,6 +68,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="key_pc_5"
         android:title="5. 연락처 설정">
 
         <!-- 전화 / 문자메시지 / 카톡 / 라인 / 페이스북 메신저 / ... -->
