전화, 문자 선택 및 설정 작성 DialogPreference 완성. (확인;또는 저장 버튼 누를시 체크상황 및 메시지 반영.)

--- a/app/src/main/res/layout/view_selector_sp.xml
+++ b/app/src/main/res/layout/view_selector_sp.xml
@@ -50,7 +50,7 @@
                 android:enabled="false"
                 android:layout_weight="1"
                 android:autoSizeTextType="uniform"
-                android:hint="문자 메시지 체크상자를 눌러주세요"/>
+                android:maxLength="70"/>
 
             <CheckBox
                 android:id="@+id/cb_sms_auto"
