SharedPref 에서 DB로 저장되도록 전면 수정.

--- a/app/src/main/res/layout/activity_alarm_setup.xml
+++ b/app/src/main/res/layout/activity_alarm_setup.xml
@@ -18,6 +18,7 @@
         <fragment
             android:id="@+id/fragment_alarm_setup"
             android:name="project.wgl.callarm.AlarmSetupFragment"
+            android:tag="fragment_alarm_setup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
