프래그먼트 인스턴스화 완료, 기본값 설정 하드코딩, Oreo 미만 환경에서의 미작동 문제 해결.

--- a/app/src/main/res/layout/activity_alarm_setup.xml
+++ b/app/src/main/res/layout/activity_alarm_setup.xml
@@ -15,10 +15,8 @@
             android:layout_height="wrap_content">
         </android.support.v7.widget.Toolbar>
 
-        <fragment
-            android:id="@+id/fragment_alarm_setup"
-            android:name="project.wgl.callarm.AlarmSetupFragment"
-            android:tag="fragment_alarm_setup"
+        <FrameLayout
+            android:id="@+id/fl_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
