--- a/app/src/main/res/xml/layout_alarm_setup.xml
+++ b/app/src/main/res/xml/layout_alarm_setup.xml
@@ -2,7 +2,6 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
         android:title="1. 1회용/반복설정">
-
         <SwitchPreference
             android:title="반복 설정 유/무"
             android:summaryOn="아래 설정된 사항에 맞춰 반복됩니다"
@@ -12,8 +11,8 @@
             android:key="key_sp_repeat"/>
     </PreferenceCategory>
 
-    <PreferenceCategory
 
+    <PreferenceCategory
         android:title="2. 날짜 / 요일 선택">
         <!-- 임의의 Preference 클래스 생성해야함 -->
         <project.wgl.callarm.DatePDialogPreference
@@ -28,7 +27,8 @@
             android:entries="@array/ddd"
             android:entryValues="@array/ddd_result"
             android:key="key_p_day"/>
-    </PreferenceCategory>
+    </PreferenceCategory
+>
 
     <PreferenceCategory
         android:title="3. 시간 설정">
@@ -42,7 +42,6 @@
 
     <PreferenceCategory
         android:title="4. 소리/진동 설정">
-
         <project.wgl.callarm.RPDialogPreference
             android:key="key_rp_ringtone"
             android:title="소리 선택"
@@ -64,13 +63,12 @@
             android:switchTextOff="진동을 울리지 않습니다"
             android:summaryOn="진동도 같이 울립니다"
             android:summaryOff="진동을 울리지 않습니다"/>
-
     </PreferenceCategory>
+
 
     <PreferenceCategory
         android:key="key_pc_5"
         android:title="5. 연락처 설정">
-
         <!-- 전화 / 문자메시지 / 카톡 / 라인 / 페이스북 메신저 / ... -->
         <project.wgl.callarm.CPDialogPreference
             android:key="key_p_contact"
@@ -78,13 +76,11 @@
             android:persistent="false"
             android:positiveButtonText="설정"
             android:negativeButtonText="닫기"/>
-
         <project.wgl.callarm.SPDialogPreference
             android:key="key_mp_check"
             android:title="전화 / 문자 선택 및 설정"
             android:enabled="false"
             android:persistent="false"/>
-
     </PreferenceCategory>
 
 </PreferenceScreen>
