--- a/app/src/main/res/layout/activity_alarm_list.xml
+++ b/app/src/main/res/layout/activity_alarm_list.xml
@@ -3,10 +3,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_temp"
-        android:text="알람 리스트"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:id="@+id/ll_list_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_temp"
+            android:text="알람 리스트"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_alarm_list"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
