--- a/app/src/main/res/layout/cell_list_alarm.xml
+++ b/app/src/main/res/layout/cell_list_alarm.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_list_alarm"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="true"
@@ -90,3 +95,5 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
+
+</android.support.constraint.ConstraintLayout>
